# Acts_vectorized_LA_backend

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  matrix_operations.hpp
include/data/: fixtures.hpp  fixtures.ipp
include/definitions/: types.hpp
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  matrix_operations_benchmarks.cpp
src/tests/: CMakeLists.txt  matrix_operations_test.cpp
